# hello_rust

./: Cargo.toml  README.md
code_organize/: Cargo.toml
code_organize/src/: main.rs
control_flow/src/: main.rs
data_type/src/: hash_map.rs  main.rs
data_type/src/base_data_type/: array.rs  boolean.rs  characters.rs  floating_point_numbers.rs  integer.rs  mod.rs  tuple.rs  variable.rs
data_type/src/enumeration/: enum_base.rs  match_base.rs  mod.rs
data_type/src/hash_map/: hash_map_base.rs
data_type/src/slice/: mod.rs  slice.rs
data_type/src/slice_part/: mod.rs  slice.rs
data_type/src/string_part/: mod.rs  string.md  (+2 more)
function/src/: main.rs
http_ie/: Cargo.toml
http_ie/src/: main.rs
lifecycle/src/: main.rs
ownership/src/: main.rs  ownership.rs  ownership_test.rs  quote_borrow.rs
scrape_url/: Cargo.toml  test.md
scrape_url/src/: main.rs
src/: common.rs  function.rs  lib.rs  main.rs
src/control_flow/: control_flow.rs  mod.rs
src/data_type/: array.rs  boolean.rs  characters.rs  floating_point_numbers.rs  index.rs  integer.rs  mod.rs  tuple.rs
src/enumeration/: enum_base.rs  match_base.rs
src/error_part/: error_handle.rs  error_operation.rs  mod.rs  unwrap_base.rs
src/hash_map_part/: hash_map.rs  mod.rs
src/lifecycle/: lifecycle.rs  mod.rs
src/ownership/: mod.rs  ownership.rs  quote_borrow.rs
src/string_part/: mod.rs  string_base.rs
src/struct_part/: struct_base.rs  struct_method.rs
src/test/: test.rs
src/trait_part/: mod.rs  trait_base.rs
src/vector_part/: mod.rs  vector_base.rs  vector_loop.rs
vocabulary/: word.md
(+4 files in other folders)
