[package]
name = "http_ie"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] } # 命令行解析
anyhow = "1.0.86"  # 错误处理
colored = "2.1.0" # 命令终端多彩显式
jsonxf = "1.1.1" # json格式化
mime = "0.3.17" # 处理mime类型
# reqwest = { version = "0.12.5", features = ["json"] } # http客户端
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } # HTTP 客户端
tokio = { version = "1.39.2", features = ["full"] } # 异步处理库
syntect = "5.2.0"
